--- a/package.json
+++ b/package.json
@@ -18,5 +18,11 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "daisyui": "^3.2.1",
+    "postcss": "^8.4.25",
+    "tailwindcss": "^3.3.2"
   }
 }
