--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "prisma": {
+    "schema": "src/prisma/schema.prisma"
+  },
   "dependencies": {
     "@hookform/resolvers": "^3.1.1",
+    "@prisma/client": "^5.0.0",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-radio-group": "^1.1.3",
@@ -19,6 +23,7 @@
     "@types/react-dom": "18.2.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "date-fns": "^2.30.0",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
     "lucide-react": "^0.263.1",
@@ -36,6 +41,7 @@
     "autoprefixer": "^10.4.14",
     "daisyui": "^3.2.1",
     "postcss": "^8.4.25",
+    "prisma": "^5.0.0",
     "tailwindcss": "^3.3.2"
   }
 }
