completed working version of decryption flow

--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-DATABASE_URL=postgresql://postgres:9swoT!3Z5Gtk@db.eiaghrbaxrcwhvmmwlki.supabase.co:5432/postgres
-DEBUG="*"
+DATABASE_URL=postgresql://postgres:postgres@localhost:54322/postgres
