--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,6 @@
 {
-  "extends": ["next/core-web-vitals", "eslint:recommended"]
-
+  "extends": ["next/core-web-vitals", "eslint:recommended"],
+  "globals": {
+    "globalThis": false
+  }
 }
