--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "date-fns": "^2.30.0",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
-    "lucide-react": "^0.263.1",
+    "lucide-react": "^0.263.2-beta.0",
     "next": "13.4.9",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
