--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@supabase/supabase-js": "^2.32.0",
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
@@ -28,6 +29,8 @@
     "date-fns": "^2.30.0",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
+    "formidable": "^3.5.0",
+    "formidable-upload-koa": "^1.0.1",
     "lucide-react": "^0.263.2-beta.0",
     "next": "13.4.9",
     "next-themes": "^0.2.1",
@@ -40,6 +43,7 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@types/formidable": "^3.4.0",
     "autoprefixer": "^10.4.14",
     "daisyui": "^3.2.1",
     "postcss": "^8.4.25",
