--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
+    "@typescript-eslint/eslint-plugin": "^6.7.0",
     "@upstash/qstash": "^2.1.2",
     "axios": "^1.4.0",
     "class-variance-authority": "^0.7.0",
@@ -42,6 +43,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.2",
+    "save-dev": "^0.0.1-security",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.6",
     "typescript": "5.1.6",
