--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@clerk/nextjs": "^4.23.4",
     "@clerk/themes": "^1.7.5",
     "@hookform/resolvers": "^3.1.1",
+    "@livekit/components-react": "^1.2.0",
+    "@livekit/components-styles": "^1.0.6",
     "@prisma/client": "^5.0.0",
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
@@ -27,6 +29,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.4",
+    "@radix-ui/react-tooltip": "^1.0.6",
     "@supabase/supabase-js": "^2.32.0",
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
@@ -40,6 +43,8 @@
     "eslint-config-next": "13.4.9",
     "formidable": "^3.5.0",
     "formidable-upload-koa": "^1.0.1",
+    "livekit-client": "^1.13.3",
+    "livekit-server-sdk": "^1.2.6",
     "lucide-react": "^0.263.2-beta.0",
     "next": "13.4.9",
     "next-themes": "^0.2.1",
@@ -48,7 +53,6 @@
     "react-hook-form": "^7.45.2",
     "save-dev": "^0.0.1-security",
     "tailwind-merge": "^1.14.0",
-    "tailwindcss-animate": "^1.0.6",
     "typescript": "5.1.6",
     "zod": "^3.21.4"
   },
@@ -66,6 +70,7 @@
     "lint-staged": "^14.0.1",
     "postcss": "^8.4.25",
     "prisma": "^5.0.0",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.3.2",
+    "tailwindcss-animate": "^1.0.7"
   }
 }
