--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "livekit-server-sdk": "^1.2.6",
     "lucide-react": "^0.263.2-beta.0",
     "next": "13.4.9",
+    "next-superjson-plugin": "^0.5.9",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
