--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "@upstash/qstash": "^2.1.2",
+    "@vercel/analytics": "^1.0.2",
     "axios": "^1.4.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
