--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "livekit-server-sdk": "^1.2.6",
     "lucide-react": "^0.263.2-beta.0",
     "next": "13.4.9",
+    "next-compose-plugins": "^2.2.1",
     "next-superjson-plugin": "^0.5.9",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
@@ -59,10 +60,12 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^13.5.2",
     "@types/formidable": "^3.4.0",
     "@typescript-eslint/eslint-plugin": "^6.7.0",
     "@typescript-eslint/parser": "^6.7.0",
     "autoprefixer": "^10.4.14",
+    "cross-env": "^7.0.3",
     "daisyui": "^3.2.1",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-next": "^0.0.0",
